# survive-lib-dev-linux

./: .gitignore  CMakeLists.txt  README.md  build.sh  lighthouses.json  unit_test_live
include/redist/: linmath.cpp  linmath.h
include/spree/: interface.h  poser.h
src/: CMakeLists.txt  SpreeSurviveLibPoser.cbp  controller.cpp  controller.h  definitions.h  io-handler.cpp  io-handler.h  lighthouse-ootx.cpp  lighthouse-ootx.h  objects.cpp  objects.h  p3p.h  pose-manager.cpp  pose-manager.h  poser-mpfit.cpp  poser-mpfit.h  poser-p3p-lt-reprojection-wrapper.cpp  poser-p3p-lt-reprojection-wrapper.h  poser-p3p-lt-reprojection.cpp  poser-p3p-lt-reprojection.h  poser.cpp  reprojection-generated.h  utils.cpp  utils.h
unittest_common/: io_handler.cpp  io_handler.h
unittest_live/: CMakeLists.txt  usb_track.cpp  usb_track.h
unittest_rec/: CMakeLists.txt  main.cpp
